# rtcBase

./: .gitignore  CHANGELOG.md  Makefile  README.md  SOURCE.mk  arraysize.h  atomic_c.h  atomic_ops.h  buffer.h  checks.cc  checks.h  checks_c.c  common_types.h  critical_section.cc  critical_section.h  ctime.h  event.cc  event.h  features_config.h  location.h  make_unique.h  meson.build  message_handler.cc  message_handler.h  null_socket_server.cc  null_socket_server.h  optional.cc  optional.h  platform_thread.cc  platform_thread.h  platform_thread_types.cc  platform_thread_types.h  race_checker.h  random.cc  random.h  rate_statistics.cc  rate_statistics.h  ref_counter.h  socket_factory.h  socket_server.h  (+16 more)
adapter_c/: SOURCE.mk  audio_webrtc_buffer.cc  audio_webrtc_buffer.h  audio_webrtc_mixer.cc  audio_webrtc_mixer.h  audio_webrtc_multi.cc  audio_webrtc_multi.h  audio_webrtc_proc.cc  audio_webrtc_proc.h
adapter_c/demos/: aproc.c
common_audio/: DEPS  SOURCE.mk  audio_converter.cc  audio_ring_buffer.cc  channel_buffer.h  fir_filter.cc  fir_filter_avx2.cc  fir_filter_avx2.h  fir_filter_factory.cc  fir_filter_neon.cc  fir_filter_neon.h  fir_filter_sse.cc  fir_filter_sse.h  lapped_transform.cc  meson.build  real_fourier.cc  real_fourier_ooura.cc  smoothing_filter.cc  smoothing_filter.h  sparse_fir_filter.cc  wav_file.cc  wav_header.cc  window_generator.cc
common_audio/include/: audio_util.h
common_audio/resampler/: push_resampler.cc  push_sinc_resampler.cc  push_sinc_resampler.h  resampler.cc  sinc_resampler.cc  sinc_resampler.h  sinc_resampler_avx2.cc  sinc_resampler_neon.cc  sinc_resampler_sse.cc  sinusoidal_linear_chirp_source.cc  sinusoidal_linear_chirp_source.h
common_audio/signal_processing/: complex_bit_reverse.c  complex_bit_reverse_arm.S  complex_bit_reverse_mips.c  complex_fft.c  complex_fft_mips.c  cross_correlation_mips.c  cross_correlation_neon.c  division_operations.c  dot_product_with_scale.c  downsample_fast.c  downsample_fast_mips.c  downsample_fast_neon.c  filter_ar_fast_q12.c  filter_ar_fast_q12_armv7.S  filter_ar_fast_q12_mips.c  filter_ma_fast_q12.c  levinson_durbin.c  min_max_operations_mips.c  min_max_operations_neon.c  resample_by_2.c  resample_by_2_internal.c  resample_by_2_mips.c  spl_init.c  splitting_filter.c  vector_scaling_operations_mips.c
common_audio/vad/: vad.cc  vad_core.c
demo/: adapter.h  multi.cc  override.cc  peon.h  projects.cc  service.h  single.cc  workers.cc
demo/conference_mixer/: main.cc
demo/mixer/: main.cc  main.cpp
demo/neteq/: main.cc  main.cpp
demo/samples/: 1_16000_16_1.pcm  2_48000_16_2.pcm  6_48000_16_2.pcm
demos/: SOURCE.mk
demos/aec/: CWAVIN.cc  CWAVIN.h  CWAVOUT.cc  CWAVOUT.h  aec.cc
demos/conference_mixer/: main.cc
demos/mixer/: main.cc
demos/ns/: ns2.cc
doc/: WebRTC源代码探索之旅.md
features/: align_c.c  align_c.h  align_c_inl.h  features_config.h  make_unique.h  optional.cc  optional.h  thread_c.c  thread_c.h  thread_c_inl.h  time_c.c  time_c.h  time_c_inl.h
memory/: aligned_malloc.cc
modules/: SOURCE.mk
modules/audio_coding/: DEPS
modules/audio_conference_mixer/: DEPS  meson.build
modules/audio_mixer/: DEPS  audio_frame_manipulator.cc  audio_frame_manipulator.h  audio_mixer.h  audio_mixer_impl.cc  audio_mixer_impl.h  channel_mixer.cc  channel_mixer.h  channel_mixing_matrix.cc  channel_mixing_matrix.h  default_output_rate_calculator.cc  frame_combiner.cc  frame_combiner.h  gain_change_calculator.h  meson.build  sine_wave_generator.cc  sine_wave_generator.h
modules/audio_processing/: DEPS  audio_buffer.cc  audio_buffer.h  audio_processing_impl.cc  audio_processing_impl.h  common.h  (+25 more)
modules/utility/: DEPS  meson.build
modules/utility/include/: audio_frame_operations.cc  audio_frame_operations.h
numerics/: safe_compare.h  safe_conversions_impl.h  safe_minmax.h
rtc_base/: DEPS  README.md  array_view.h  arraysize.h  atomic_ops.h  atomicops.h  buffer.h  checks.cc  checks.h  critical_section.cc  critical_section.h  criticalsection.cc  criticalsection.h  event.cc  event.h  location.cc  location.h  logging.h  meson.build  message_handler.h  messagehandler.cc  messagehandler.h  messagequeue.cc  messagequeue.h  nullsocketserver.cc  optional.h  platform_file.h  platform_thread.cc  platform_thread.h  platform_thread_types.cc  platform_thread_types.h  race_checker.cc  race_checker.h  rate_statistics.cc  rate_statistics.h  refcount.h  refcountedobject.h  safe_compare.h  safe_conversions.h  socket_factory.h  (+17 more)
samples/: 4_48000_16_2.pcm
stdatomic/: stdatomic.h
synchronization/: sequence_checker.cc  sequence_checker.h
system/: arch.h  compile_magic.h  file_wrapper.cc  file_wrapper.h
system_wrappers/: SOURCE.mk  meson.build
system_wrappers/include/: atomic32.h  cpu_features_wrapper.h  file_wrapper.h  metrics.h  metrics_default.h  rtp_to_ntp_estimator.h  static_instance.h
system_wrappers/source/: cpu_features.cc  metrics_default.cc  trace_impl.cc  trace_impl.h
webrtc/: common.h  common_types.h  meson.build  typedefs.h
webrtc/base/: meson.build  platform_thread.cc
webrtc/modules/audio_coding/: meson.build
webrtc/modules/audio_coding/neteq/: accelerate.cc  accelerate.h  buffer_level_filter.cc  delay_manager.cc  delay_manager.h  delay_peak_detector.cc  delay_peak_detector.h  histogram.cc  histogram.h  normal.cc  normal.h  preemptive_expand.cc  preemptive_expand.h  time_stretch.cc  time_stretch.h
webrtc/modules/audio_conference_mixer/: DEPS  meson.build
webrtc/modules/audio_conference_mixer/include/: audio_conference_mixer.h  audio_conference_mixer_defines.h
webrtc/modules/audio_conference_mixer/source/: audio_conference_mixer_impl.cc  audio_conference_mixer_impl.h  audio_frame_manipulator.cc
webrtc/modules/audio_mixer/: DEPS  audio_frame_manipulator.cc  audio_frame_manipulator.h  audio_mixer_impl.cc  audio_mixer_impl.h  frame_combiner.cc  meson.build
webrtc/modules/audio_mixer/include/: audio_mixer.h
webrtc/modules/utility/: DEPS  meson.build
webrtc/modules/utility/include/: audio_frame_operations.cc
webrtc/modules/utility/interface/: audio_frame_operations.cc
(+391 files in other folders)
